[tool.poetry]
name = "liquid-redis"
version = "0.1.0"
description = "Liquid store implementation backed by Redis"
authors = ["hacksparr0w <hacksparr0w@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
liquid = {git = "https://github.com/thewhitepill/liquid.git"}
pydantic = "^2.6.2"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
